--- a/4(1).html
+++ b/4(1).html
@@ -19,8 +19,7 @@
 <br>
 <p align="center">
     <br>
-    <marquee direction="left" behavior="scroll" width="800" bgcolor="#125l12" height="50"
-             behavior="Alternate">
+    <marquee direction="left" behavior="scroll" width="800" bgcolor="#125l12" height="50">
         <font color="#8b008b" face="Verdana"
               size="4"></font> <b><i>
         <br>
@@ -32,8 +31,7 @@
     <br>
 <p align="center">
     <br>
-    <marquee direction="right" behavior="slide" width="800" bgcolor="#45f005" height="50"
-             behavior="Alternate">
+    <marquee direction="right" behavior="slide" width="800" bgcolor="#45f005" height="50">
         <font color="#8b008b" face="Verdana"
               size="4"></font> <b><i>
         <br>
@@ -43,8 +41,7 @@
     <br>
 <p align="center">
     <br>
-    <marquee scrolldelay="70" width="800" bgcolor="#99f567" height="50"
-             behavior="Alternate">
+    <marquee scrolldelay="70" width="800" bgcolor="#99f567" height="50">
         <font color="#8b008b" face="Verdana"
               size="4"></font> <b><i>
         <br>
@@ -54,8 +51,7 @@
     <br>
 <p align="center">
     <br>
-    <marquee srolldaelay="100" width="800" bgcolor="#34b546" height="50"
-             behavior="Alternate">
+    <marquee srolldaelay="100" width="800" bgcolor="#34b546" height="50">
         <font color="#8b008b" face="Verdana"
               size="4"></font> <b><i>
         <br>
